# Cloth-Simulation

./: CMakeLists.txt  Cloth.cpp  Cloth.h  Main.cpp  Particle.cpp  Particle.h  README.md  Spring.cpp  Spring.h  main.cpp
COD891_CODE_BASE/2020_HYLC_data_code/data/: LICENSE  readme.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/basket/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/cartridge_belt_rib/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/minor_project_data/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/new/0.5_0.5_0.01/: fit.json  info.txt  test.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/new/0.5_0.5_0.01_new/: data.txt  fit.json  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/new/20_20_20_...1/: info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/satin/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/satin_small/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/slip_stitch_honeycomb/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/stockinette/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/data/stockinette_small/: data.txt  info.txt
COD891_CODE_BASE/2020_HYLC_data_code/fitting/: fit.json  fit1.json  fit2.json  fitting.ipynb  readme.txt
COD891_CODE_BASE/2020_HYLC_data_code/fitting/pyHYLC/fitting/: MLS.py  datautils.py  (+4 more)
COD891_CODE_BASE/ARCSim-HYLC-master/hylcmaterials/: fit2.json  fit6.json  fit_1.json  fit_real.json  information  minor_project.json  minor_project_1.json  test.json
COD891_CODE_BASE/ARCSim-HYLC-master/simulate/: conf.json
(+4 files in other folders)
